Add sidr and Recaf